# TDAvec

./: .Rbuildignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION  LICENSE  NAMESPACE  README.md  a.txt  paper.bib  paper.md
JOSS/: paper-python.bib  paper-python.md  paper.bib  paper.md
R/: RcppExports.R
arXiv/: main.tex  paper.bib
man/: computeAF.Rd  computeAlgebraicFunctions.Rd  computeBetti.Rd  computeBettiCurve.Rd  computeCP.Rd  computeComplexPolynomial.Rd  computeECC.Rd  computeEulerCharacteristic.Rd  computeLimits.Rd  computeNL.Rd  computeNormalizedLife.Rd  computePES.Rd  computePI.Rd  computePL.Rd  computePS.Rd  computePersistenceBlock.Rd  computePersistenceImage.Rd  computePersistenceLandscape.Rd  computePersistenceSilhouette.Rd  computePersistentEntropy.Rd  computeStats.Rd  computeTC.Rd  computeTF.Rd  computeTemplateFunction.Rd  computeTropicalCoordinates.Rd  computeVAB.Rd  computeVPB.Rd
python/: MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
python/sample_notebook/: circle_vs_ellipse.ipynb
python/tdavec/: __init__.py  py_times.txt  tdavec_core.pyx  time_tests.py  unit_test.py  vectorizer.py
sample_notebook/: new_vectorizations.ipynb  tdavec.ipynb
src/: AF.cpp  AlgebraicFunctions.cpp  Betti.cpp  BettiCurve.cpp  CP.cpp  ComplexPolynomial.cpp  ECC.cpp  EulerCharacteristic.cpp  Limits.cpp  Makevars  NL.cpp  NormalizedLife.cpp  PES.cpp  PI.cpp  PL.cpp  PS.cpp  PersistenceBlock.cpp  PersistenceImage.cpp  PersistenceLandscape.cpp  PersistenceSilhouette.cpp  PersistentEntropy.cpp  RcppExports.cpp  Stats.cpp  TC.cpp  TF.cpp  (+5 more)
(+13 files in other folders)
