# pyproject.toml
[build-system]
requires = [
   "setuptools>=61.0",
    "wheel",
    "Cython==3.0.12",
    "numpy==1.26.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "tdavec"
version = "0.1.43"
dependencies = [
    "numpy==1.26.4",
    "ripser==0.6.8"
]
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["tdavec"]
